openshift/deployment-conifg-petclinic.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
    name: petclinic
spec:
    replicas: 1
    selector:
        deploymentconfig: petclinic
    template:
        metadata:
            labels:
                deploymentconfig: petclinic
        spec:
            containers:
            - name: petclinic
              image: petclinc:latest
              ports:
              - containerPort: 8080
              # envFrom:
              # - configMapRef:
              #     name: petclinic-config
              resources:
                requests:
                  cpu: 500m
                  memory: 1G
                limits:
                  cpu: 1
                  memory: 1.5G
              livenessProbe:
                httpGet:
                  path: /
                  port: 8080
                initialDelaySeconds: 60
                periodSeconds: 10
                failureThreshold: 3
              readinessProbe:
                httpGet:
                  path: /
                  port: 8080
                periodSeconds: 10
    triggers:
      - imageChangeParams:
          automatic: true
          containerNames:
            - petclinic
          from:
            kind: ImageStreamTag
            name: 'petclinc:latest'
            namespace: formadores
        type: ImageChange
