openshift/deployment-petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: petclinic
spec:
    replicas: 1
    selector:
        matchLabels:
            application: petclinic
    template:
        metadata:
            labels:
                application: petclinic
        spec:
           containers:
            - name: petclinic
              image: nachomillangarcia/petclinic
              ports:
              - containerPort: 8080
              # envFrom:
              # - configMapRef:
              #     name: petclinic-config
              resources:
                requests:
                  cpu: 500m
                  memory: 1G
                limits:
                  cpu: 1
                  memory: 1.5G
              livenessProbe:
                httpGet:
                  path: /
                  port: 8080
                initialDelaySeconds: 60
                periodSeconds: 10
                failureThreshold: 3
              readinessProbe:
                httpGet:
                  path: /
                  port: 8080
                periodSeconds: 10
            #   volumeMounts:
            #   - name: my-config-map
            #     mountPath: /app/application.properties
            #     subPath: application.properties                      
            # volumes:
            # - name: my-config-map
            #   configMap:                  
            #     name: petclinic-config
