openshift/deployment-todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: todo
spec:
    selector:
        matchLabels:
            app: todo
    template:
        metadata:
            labels:
                app: todo
        spec:
            containers:
            - name: todo
              image: nachomillangarcia/java-todo
              ports:
              - containerPort: 8080
