openshift/deployment-tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tomcat-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: tomcat
    template:
        metadata:
            labels:
                app: tomcat
        spec:
            containers:
            - name: tomcat
              image: tomcat
              ports:
              - containerPort: 8080
