openshift/service-todo.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
