openshift/route-todo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    application: todo
  name: todo
spec:
  host: todo.2886795289-80-kitek03.environments.katacoda.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: todo
    weight: 100
