openshift/route-tomcat.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    application: tomcat
  name: tomcat
spec:
  host: tomcat.2886795297-80-kitek03.environments.katacoda.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: tomcat
    weight: 100
